--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@OLATEJUOLA67242">
+<meta name="twitter:creator" content="@OLATEJUOLA67242">
+<meta name="twitter:title" content="Parade of Fans for Houston’s Funeral">
+<meta name="twitter:description" content="NEWARK - The guest list and parade of limousines with celebrities emerging from them seemed more suited to a red carpet event in Hollywood or New York than than a gritty stretch of Sussex Avenue near the former site of the James M. Baxter Terrace public housing project here.">
+ <meta name="twitter:image" content="img/000.jpeg">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
