--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+<script type='text/javascript' src='//pl21915502.toprevenuegate.com/b8/40/91/b840913c3437187c9582e3f1fb9d9d14.js'></script>
 </head>
 
 <body id="page-top">
